// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'altair' to 'karura' using bridgeSDK cross-chain 'AIR' > after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 18,
  "fromChain": "(rounded 998)",
  "toChain": "(rounded 1.99)",
}
`;

exports[`'altair' to 'karura' using bridgeSDK cross-chain 'AIR' > fee 1`] = `"(rounded 0.006)"`;

exports[`'altair' to 'karura' using bridgeSDK cross-chain 'AIR' > initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 18,
  "fromChain": 1000,
  "toChain": 0,
}
`;

exports[`'altair' to 'karura' using bridgeSDK cross-chain 'KUSD' > after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 8,
  "toChain": "(rounded 12)",
}
`;

exports[`'altair' to 'karura' using bridgeSDK cross-chain 'KUSD' > fee 1`] = `"(rounded 0.002)"`;

exports[`'altair' to 'karura' using bridgeSDK cross-chain 'KUSD' > initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 10,
  "toChain": 10,
}
`;
